# backup-manager

./: .gitignore  Cargo.toml  com.rajesh.backup-manager.plist  config.example.yaml
src/: archive.rs  config.rs  keychain.rs  main.rs  restore.rs  scanner.rs
