[package]
name = "backup-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
glob = "0.3"
tar = "0.4"
bzip2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
rpassword = "7"
sha2 = "0.10"
rand = "0.9"
tempfile = "3"
libc = "0.2"
